Revert "fix alignment issue"
This reverts commit dccfe5af3df221bb3c787a65d949c94d8db61969.

--- a/static/style.css
+++ b/static/style.css
@@ -76,7 +76,6 @@ body {
 .card {
   border-radius: 25px;
   background-color: #f3bfea;
-  
   box-shadow: inset;
 }
 .image-content,
@@ -114,7 +113,7 @@ body {
   color: #707070;
   text-align: center;
 }
-.btn-btn {
+.btn {
   border: none;
   font-size: 16px;
   color: #fff;
@@ -125,7 +124,7 @@ body {
   cursor: pointer;
   transition: all 0.3s ease;
 }
-.btn-btn:hover {
+.btn:hover {
   background: #265df2;
 }
 
@@ -181,7 +180,6 @@ body {
   padding: 14px;
   border-radius: 20px;
   border: none;
-  background: linear-gradient(to right, #f436ba, #ff0068);
 }
 
 .popular-anime {
